--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -7,17 +7,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MyActivity"
-    android:onClick="openNewGame">
+    android:onClick="openNewGame"
+    android:clickable="true">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/NewGame"
         android:id="@+id/bNewGame"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="66dp"
-       />
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/bExit"
+        android:layout_toStartOf="@+id/bExit" />
 
     <Button
         android:layout_width="wrap_content"
@@ -27,4 +27,50 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textServername"
+        android:inputType="text"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:enabled="true"
+        android:hint="Servername"
+        android:layout_toLeftOf="@+id/switchStartStopServer"
+        android:layout_toStartOf="@+id/switchStartStopServer" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Active Servers"
+        android:id="@+id/textView"
+        android:layout_below="@+id/textServername"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/switchStartStopServer"
+        android:layout_above="@+id/textView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textOff="Start"
+        android:textOn="Stop"
+        android:checked="false"
+        android:clickable="true"
+        android:enabled="false" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listViewActiveServers"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/bNewGame" />
+
 </RelativeLayout>
