--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -9,19 +9,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ownCardsLeft"
+        android:src="@drawable/pik_ober"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:src="@drawable/pik_ober" />
+        android:layout_alignParentStart="true" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ownCardsRight"
+        android:src="@drawable/pik_ober"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/pik_ober" />
+        android:layout_alignParentEnd="true" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -45,18 +45,18 @@
         android:layout_height="wrap_content"
         android:id="@+id/publicCardsMiddle"
         android:src="@drawable/pik_zehn"
-        android:layout_alignTop="@+id/publicCardsRight"
-        android:layout_toRightOf="@+id/publicCardsLeft"
-        android:layout_toEndOf="@+id/publicCardsLeft" />
+        android:layout_above="@+id/textViewOwnCards"
+        android:layout_alignLeft="@+id/ownCardsMiddle"
+        android:layout_alignStart="@+id/ownCardsMiddle" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/publicCardsRight"
         android:src="@drawable/herz_ober"
-        android:layout_alignTop="@+id/publicCardsLeft"
-        android:layout_toRightOf="@+id/publicCardsMiddle"
-        android:layout_toEndOf="@+id/publicCardsMiddle" />
+        android:layout_above="@+id/textViewOwnCards"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
