--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -3,57 +3,52 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity">
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="96dp"
+        android:layout_height="160dp"
         android:id="@+id/ownCardsLeft"
-        android:src="@drawable/pik_ober"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="96dp"
+        android:layout_height="160dp"
         android:id="@+id/ownCardsRight"
-        android:src="@drawable/pik_ober"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="96dp"
+        android:layout_height="160dp"
         android:id="@+id/ownCardsMiddle"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/karo_zehn" />
+        android:layout_centerHorizontal="true" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="96dp"
+        android:layout_height="160dp"
         android:id="@+id/publicCardsLeft"
-        android:src="@drawable/kreuz_sieben"
         android:layout_above="@+id/textViewOwnCards"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="96dp"
+        android:layout_height="160dp"
         android:id="@+id/publicCardsMiddle"
-        android:src="@drawable/pik_zehn"
         android:layout_above="@+id/textViewOwnCards"
         android:layout_alignLeft="@+id/ownCardsMiddle"
         android:layout_alignStart="@+id/ownCardsMiddle" />
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="96dp"
+        android:layout_height="160dp"
         android:id="@+id/publicCardsRight"
-        android:src="@drawable/herz_ober"
         android:layout_above="@+id/textViewOwnCards"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
@@ -77,5 +72,54 @@
         android:layout_above="@+id/publicCardsLeft"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/TextViewNowTurnPlayer"
+        android:layout_below="@+id/textViewCaptionNowTurnPlayer"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Jetzt am Zug:"
+        android:id="@+id/textViewCaptionNowTurnPlayer"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Nächster Spieler:"
+        android:id="@+id/textViewCaptionNextTurnPlayer"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/TextViewNextTurnPlayer"
+        android:layout_below="@+id/textViewCaptionNextTurnPlayer"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Weiter"
+        android:id="@+id/buttonNext"
+        android:layout_above="@+id/textViewPublicCards"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
