--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -10,6 +10,7 @@
         android:layout_width="96dp"
         android:layout_height="160dp"
         android:id="@+id/ownCardsLeft"
+        android:onClick="switchCardsOwn"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -18,6 +19,7 @@
         android:layout_width="96dp"
         android:layout_height="160dp"
         android:id="@+id/ownCardsRight"
+        android:onClick="switchCardsOwn"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
@@ -26,6 +28,7 @@
         android:layout_width="96dp"
         android:layout_height="160dp"
         android:id="@+id/ownCardsMiddle"
+        android:onClick="switchCardsOwn"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
@@ -33,6 +36,8 @@
         android:layout_width="96dp"
         android:layout_height="160dp"
         android:id="@+id/publicCardsLeft"
+        android:longClickable="true"
+        android:onClick="switchCardsPublic"
         android:layout_above="@+id/textViewOwnCards"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -41,6 +46,7 @@
         android:layout_width="96dp"
         android:layout_height="160dp"
         android:id="@+id/publicCardsMiddle"
+        android:onClick="switchCardsPublic"
         android:layout_above="@+id/textViewOwnCards"
         android:layout_alignLeft="@+id/ownCardsMiddle"
         android:layout_alignStart="@+id/ownCardsMiddle" />
@@ -49,6 +55,8 @@
         android:layout_width="96dp"
         android:layout_height="160dp"
         android:id="@+id/publicCardsRight"
+        android:onClick="switchCardsPublic"
+        android:longClickable="true"
         android:layout_above="@+id/textViewOwnCards"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
@@ -118,6 +126,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Weiter"
+        android:onClick="next"
         android:id="@+id/buttonNext"
         android:layout_above="@+id/textViewPublicCards"
         android:layout_centerHorizontal="true" />
