--- a/app/src/main/res/layout/activity_server.xml
+++ b/app/src/main/res/layout/activity_server.xml
@@ -67,6 +67,7 @@
         android:text="Start Game"
         android:id="@+id/button"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="startGame" />
 
 </RelativeLayout>
