Eine TestKlasse um das GItHub zu Testen - muss nicht näher beachtet werden!

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -168,7 +168,7 @@
         android:text="00"
         android:id="@+id/textView_points"
         style="@android:style/TextAppearance.Large"
-        android:layout_alignTop="@+id/TextViewNextTurnPlayer"
+        android:layout_above="@+id/buttonNext"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
