--- a/app/src/main/res/layout/item_player.xml
+++ b/app/src/main/res/layout/item_player.xml
@@ -41,6 +41,6 @@
         android:id="@+id/ivUserIcon"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/user_icon" />
+        android:src="@drawable/ic_launcher" />
 
 </RelativeLayout>
