--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity"
-    android:id="@+id/textView_KeepCards">
+    android:onClick="showResult"
+    android:id="@+id/textView_GameActivity">
 
     <ImageButton
         android:layout_width="96dp"
