Für Markus (sortieren der ListView)

--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -7,8 +7,10 @@
     tools:context="se2.groupa.feuern.ResultActivity"
     >
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <ListView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView_show" />
-
+        android:id="@+id/listView"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
