--- a/app/src/main/res/layout/item_player.xml
+++ b/app/src/main/res/layout/item_player.xml
@@ -14,7 +14,7 @@
         android:paddingLeft="10dp"
         android:paddingRight="6dp"
         android:paddingTop="3dp"
-        android:text="Sarah"
+        android:text="Killer!!!"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 <!--
     <TextView
@@ -41,6 +41,6 @@
         android:id="@+id/ivUserIcon"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/ic_launcher"/>
+        android:src="@drawable/user_icon"/>
 
 </RelativeLayout>
