--- a/app/src/main/res/layout/activity_server.xml
+++ b/app/src/main/res/layout/activity_server.xml
@@ -59,14 +59,14 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView"
-        android:layout_above="@+id/button"
+        android:layout_above="@+id/btnStartGame"
         android:choiceMode="none" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start Game"
-        android:id="@+id/button"
+        android:id="@+id/btnStartGame"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:onClick="startGame" />
