--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -7,7 +7,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MyActivity"
-    android:onClick="openNewGame"
     android:clickable="true">
 
     <Button
@@ -51,7 +50,7 @@
         android:id="@+id/etNickname"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:inputType="text|textPersonName"
+        android:inputType="text"
         android:hint="Enter your Nickname" />
 
 </RelativeLayout>
