Nur um unsere Benutzeroberfläche präsentieren zu können, eine Test Methode "testGameActivity" in die MainActivity implementiert, die die GameActivity bei Drücken des "Exit"-Buttons mit den generischen vier Spielern startet.

--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -42,7 +42,7 @@
         android:layout_marginTop="47dp"
         android:layout_alignRight="@+id/btnClient"
         android:layout_alignEnd="@+id/btnClient"
-        android:onClick="exitApplication" />
+        android:onClick="testGameActivity" />
 
     <EditText
         android:layout_width="wrap_content"
