--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,7 +6,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity"
     android:onClick="showResult"
-    android:id="@+id/textView_GameActivity">
+    android:id="@+id/textView_GameActivity"
+    android:clickable="false">
 
     <ImageButton
         android:layout_width="96dp"
