--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -7,12 +7,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MyActivity"
-    android:clickable="true">
+    android:clickable="false">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:background="@drawable/feuern_image"
+        android:baselineAlignBottom="false"
+        android:layout_below="@+id/btnExit"
+        android:layout_alignRight="@+id/btnExit"
+        android:layout_alignEnd="@+id/btnExit"
+        android:layout_alignLeft="@+id/btnExit"
+        android:layout_alignStart="@+id/btnExit" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Server"
+        android:text="Start a new Game"
         android:id="@+id/btnServer"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -22,7 +34,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Client"
+        android:text="Join a Game"
         android:id="@+id/btnClient"
         android:layout_centerVertical="true"
         android:layout_alignLeft="@+id/btnServer"
@@ -42,7 +54,8 @@
         android:layout_marginTop="47dp"
         android:layout_alignRight="@+id/btnClient"
         android:layout_alignEnd="@+id/btnClient"
-        android:onClick="testGameActivity" />
+        android:onClick="exitApplication"
+        android:visibility="visible" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -51,6 +64,6 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:inputType="text"
-        android:hint="Enter your Nickname" />
+        android:hint="What's your name?" />
 
 </RelativeLayout>
