Background and menu about for application

--- a/app/src/main/res/menu/menu_lobby.xml
+++ b/app/src/main/res/menu/menu_lobby.xml
@@ -1,5 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" tools:context="se2.groupa.feuern.ClientActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/action_about" android:title="About"
         android:orderInCategory="100" android:showAsAction="never" />
 </menu>
