--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,6 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity"
     android:onClick="showResult"
+    android:background="@drawable/bg"
     android:id="@+id/textView_GameActivity">
 
     <ImageButton
